[package]
name = "jwt_implementation_in_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = { version = "0.4.34", features = ["serde", "clock"] }
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
tokio = "1.28.2"
tracing = "0.1.40"
